--- a/style.css
+++ b/style.css
@@ -1,9 +1,28 @@
-body {
-    background-color: #9aa2ad;
+h1 {
+    color: green;
+    margin: 0 auto;
+    width: 700px;
+    text-align: center;
+    margin-bottom: 30px;
 }
 
-.page-header {
+.button-container {
     margin: 0 auto;
-    width: 300px;
-    margin-top: 50px;
+    text-align: center;
+    width: 500px;
+    margin-bottom: 50px;
 }
+
+.cell {
+    border: 1px solid rgb(204, 204, 204);
+    display: inline-block;
+    margin-right: -1px;
+    margin-bottom: -5px;
+  }
+
+  #container {
+    margin: 0 auto;
+    text-align: center;
+    /* border: 1px solid green; */
+  }
+
